
// To run do:
// ./gradlew run

// To build a distribution zip:
// ./gradlew distZip

// To build a OS distribution :
// ./gradlew jpackage


plugins {
    id 'java'
    id 'application'
    id 'java-library'
    //id 'com.google.osdetector' version '1.6.2'

    // Badass JLink Plugin (modular app)
    //id "org.beryx.jlink" version "2.17.3"

    // Badass Runtime Plugin
    //id 'org.beryx.runtime' version '1.8.1'

    //id 'org.javamodularity.moduleplugin' version '1.6.0'
    id 'org.openjfx.javafxplugin' version '0.0.9'

    id "com.palantir.graal" version "0.7.1-9-gced34a0"

}

sourceCompatibility = 11
targetCompatibility = 11
//ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os



//version = '0.0.42'
//group = 'groupe'

application {
    mainClassName = 'klik.Klik_application'
    applicationDefaultJvmArgs = ["-Xms6G", "-Xmx12G"]
    //applicationDefaultJvmArgs = ["-Xms6G", "-Xmx12G","--module-path=/Users/philippegentric/javafx/javafx-sdk-14.0.2.1/lib", "--add-modules=javafx.controls"]

}

javafx {
    version = "14"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing','javafx.graphics','javafx.media' ]
}

dependencies {
	//implementation 'com.lmax:disruptor:3.4.2'
    //compile group: 'com.lmax', name: 'disruptor', version: '3.4.2'
    //compile group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.13.0'
    implementation 'com.drewnoakes:metadata-extractor:2.13.0'

    // for jmetro:
    //compile 'org.jfxtras:jmetro:8.6.5'
}
repositories {
    mavenCentral()
}

graal {
    mainClass 'klik.Klik_application'
    outputName 'klikapp'
    javaVersion '11'
    //option "-H:PrintFlags"
    //-Djava.library.path=/Users/philippegentric/javafx/javafx-sdk-14.0.2.1/lib"
}
    //graalVersion '1.0.0-rc6'



jar {
    from {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        configurations.runtimeClasspath.collect {  it.isDirectory() ? it : zipTree(it)  }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    manifest {
        attributes ('Implementation-Title': 'klik',
                    'Class-Path': 'Klik-1.0-SNAPSHOT.jar ',
                    'Main-Class': 'klik.Klik_application')
    }
}

/*
// Badass Runtime Plugin
runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    modules = ['java.naming', 'java.xml']
    //jpackageHome = "/Library/Java/JavaVirtualMachines/adoptopenjdk-14.jdk"
    //jpackageHome = "/Library/Java/JavaVirtualMachines/adoptopenjdk-14.jdk/Contents/Home/bin"


}
*/

/*
// Badass JLink Plugin
jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'klik'
    }
}
*/

